--- a/live.html
+++ b/live.html
@@ -4,7 +4,7 @@
 	<div id="online-booking-wrapp">
 	</div>	 
 	<script>
-		var url = 'https://hyundai.service123.co.uk/serviceplan/quote/dealer/1001';
+		var url = 'https://kiamotorsuk.service123.co.uk';
 
 		document.head.innerHTML += '<meta name = "viewport" content = "user-scalable=no, width=device-width">';
 		document.head.innerHTML += '<meta http-equiv="X-UA-Compatible" content="IE=9,10,11" />';
