--- a/global-ob.html
+++ b/global-ob.html
@@ -4,7 +4,7 @@
 	<div id="online-booking-wrapp">
 	</div>	 
 	<script>
-		var url = 'https://kiamotorsuk.service123.edy';
+		var url = 'https://kiamotorsuk.service123.edy?source=mykia';
 
 		document.head.innerHTML += '<meta name = "viewport" content = "user-scalable=no, width=device-width">';
 		document.head.innerHTML += '<meta http-equiv="X-UA-Compatible" content="IE=9,10,11" />';
@@ -31,8 +31,7 @@
 			url += formatedParam;			 
 		}
 
-		url += "?iframe-v2=true";
-		url += "&source=obmykiaapp";
+		url += "&iframe-v2=true";		 
 		
 		bookingWrapp.innerHTML = '<iframe frameborder="0" onload="sendMessage()" id="online-booking" src="' + url + '"  style="width:100%;"></iframe>'
 	})();
