--- a/global-ob-hor.html
+++ b/global-ob-hor.html
@@ -22,7 +22,7 @@ Priding ourselves on our honesty, reliability and outstanding value for money, w
 
 		<script>
 	
-	var url = 'https://demosite.devservice123.com';	
+	var url = 'https://nortonway.devservice123.com';	
 	
 	document.head.innerHTML += '<meta name = "viewport" content = "user-scalable=no, width=device-width">';
 	document.head.innerHTML += '<meta http-equiv="X-UA-Compatible" content="IE=9,10,11" />';
