--- a/global-ob-hor.html
+++ b/global-ob-hor.html
@@ -62,7 +62,7 @@ Priding ourselves on our honesty, reliability and outstanding value for money, w
 			url += formatedParam;			 
 		}
 		url += "?iframe-v2=true";
-		bookingWrapp.innerHTML = '<iframe frameborder="0" onload="sendMessage()" id="online-booking" src="' + url + '"  style="width:100%;"></iframe>';
+		bookingWrapp.innerHTML = '<iframe frameborder="0" onload="sendMessage()" id="online-booking" src="' + url + '"  style="width:100%;height: 1000px;"></iframe>';
 		
 	})();
 	
