--- a/global-ob-hor.html
+++ b/global-ob-hor.html
@@ -43,7 +43,7 @@ Priding ourselves on our honesty, reliability and outstanding value for money, w
 	<div id="online-booking-wrapp">
 	</div>	 
 	<script>
-		var url = 'https://nortonway.service123.co.uk';
+		var url = 'https://nortonway.devservice123.com';
 
 		document.head.innerHTML += '<meta name = "viewport" content = "user-scalable=no, width=device-width">';
 		document.head.innerHTML += '<meta http-equiv="X-UA-Compatible" content="IE=9,10,11" />';
