--- a/global-ob-hor.html
+++ b/global-ob-hor.html
@@ -29,7 +29,7 @@
 	<div id="online-booking-wrapp">
 	</div>	 
 	<script>
-		var url = 'https://hyundai.devservice123.com/';
+		var url = 'https://rrggrouplimited.service123.edy/';
 
 		document.head.innerHTML += '<meta name = "viewport" content = "user-scalable=no, width=device-width">';
 		document.head.innerHTML += '<meta http-equiv="X-UA-Compatible" content="IE=9,10,11" />';
