--- a/global-ob-test.html
+++ b/global-ob-test.html
@@ -37,7 +37,7 @@ Priding ourselves on our honesty, reliability and outstanding value for money, w
 		
 	(function () {
 		var queryParams = document.location.search.split('?')[1];
-		var url = 'https://nortonway.service123.edy?iframe-v2=true';		
+		var url = 'https://nortonway.devservice123.com?iframe-v2=true';		
 		var formatedParam = '';
 		var bookingWrapp = document.getElementById('online-booking-wrapp');
 
