--- a/global-ob.html
+++ b/global-ob.html
@@ -6,7 +6,7 @@
 	</div>	 
 	<script>
 		var url = 'https://hmfr-subscriptions.planmyservice.com/stripe';
-
+		var bookingWrapp = document.getElementById('online-booking-wrapp');
 		document.head.innerHTML += '<meta name = "viewport" content = "user-scalable=no, width=device-width">';
 		document.head.innerHTML += '<meta http-equiv="X-UA-Compatible" content="IE=9,10,11" />';
 	 
