--- a/global-ob.html
+++ b/global-ob.html
@@ -5,7 +5,7 @@
 	<div id="online-booking-wrapp">
 	</div>	 
 	<script>
-		var url = 'https://hmfr-subscriptions.planmyservice.com/stripe';
+		var url = 'https://stripe.com/docs/testing';
 		var bookingWrapp = document.getElementById('online-booking-wrapp');
 		document.head.innerHTML += '<meta name = "viewport" content = "user-scalable=no, width=device-width">';
 		document.head.innerHTML += '<meta http-equiv="X-UA-Compatible" content="IE=9,10,11" />';
