--- a/live.html
+++ b/live.html
@@ -4,7 +4,7 @@
 	<div id="online-booking-wrapp">
 	</div>	 
 	<script>
-		var url = 'https://demosite.service123.edy/ServicePlan/Quote';
+		var url = 'https://demosite.devservice123.com/ServicePlan/Quote';
 
 		document.head.innerHTML += '<meta name = "viewport" content = "user-scalable=no, width=device-width">';
 		document.head.innerHTML += '<meta http-equiv="X-UA-Compatible" content="IE=9,10,11" />';
