--- a/nostr.html
+++ b/nostr.html
@@ -130,7 +130,7 @@
 
     <div class="row text p-30">
         <div class="btn-cnt text-centre bold-text">
-            bitcoin@botevplovdiv.bg
+            <a class="link" href="mailto:bitcoin@botevplovdiv.bg">bitcoin@botevplovdiv.bg</a>		
         </div>
     </div>
 
