--- a/live.html
+++ b/live.html
@@ -8,7 +8,7 @@
 	<div id="online-booking-wrapp">
 	</div>	 
 	<script>
-		var url = 'https://kiamotorsuk.devservice123.com/?group=1132';
+		var url = 'https://kiamotorsuk.service123.co.uk/?group=1132';
 
 		document.head.innerHTML += '<meta name = "viewport" content = "user-scalable=no, width=device-width">';
 		document.head.innerHTML += '<meta http-equiv="X-UA-Compatible" content="IE=9,10,11" />';
