--- a/lotto.html
+++ b/lotto.html
@@ -2,7 +2,7 @@
 <html lang="bg">
 <head>
   <meta charset="UTF-8">
-  <title>Тото теглене по биткойн хеш</title>
+  <title>Тото 5/35 теглене по биткойн хеш</title>
   <style>
     body {
       font-family: sans-serif;
