--- a/lotto.html
+++ b/lotto.html
@@ -26,7 +26,7 @@
   </style>
 </head>
 <body>
-  <h1>Тото с биткойн хеш 🎲</h1>
+  <h1>Тото 5/35 с биткойн хеш 🎲</h1>
   <p>Въведи хеш на биткойн блок:</p>
   <input type="text" id="hashInput" placeholder="напр. 0000000000abcdef..." />
   <br>
