--- a/lotto.html
+++ b/lotto.html
@@ -34,6 +34,7 @@
 
   <div id="output"></div>
 
+  Реален хеш може да вземеш от <a href="https://mempool.space/">https://mempool.space/</a>
   <script>
     function drawLottoNumbers(blockHash, totalNumbers = 35, drawCount = 5) {
       const numbers = new Set();
