--- a/lotto.html
+++ b/lotto.html
@@ -28,7 +28,7 @@
 <body>
   <h1>Тото 5/35 с биткойн хеш 🎲</h1>
   <p>Въведи хеш на биткойн блок:</p>
-  <p>например 0000000000000000000103fda86227398cf709158d2c4f5c80deccde95df070d</p>p
+  <p>например 0000000000000000000103fda86227398cf709158d2c4f5c80deccde95df070d</p>
   <input type="text" id="hashInput" placeholder="напр. 0000000000abcdef..." />
   <br>
   <button onclick="generateLotto()">Изтегли числа</button>
