--- a/lotto.html
+++ b/lotto.html
@@ -35,7 +35,7 @@
 
   <div id="output"></div>
 
-  <p>Реален хеш може да вземеш от <a href="https://mempool.space/">https://mempool.space/</a></p>
+  <p>Друг реален хеш може да вземеш например от <a href="https://mempool.space/">https://mempool.space/</a></p>
   <script>
     function drawLottoNumbers(blockHash, totalNumbers = 35, drawCount = 5) {
       const numbers = new Set();
