--- a/live.html
+++ b/live.html
@@ -1,56 +1,39 @@
 <!DOCTYPE html>
 <html>
 <body>	 
-	test iframe
-
-	 
-	
-	<div id="online-booking-wrapp">
-	</div>	 
 	<script>
-		var url = 'https://kiamotorsuk.service123.co.uk/?group=1132';
+function openBooking() {
+  const bookingUrl = "https://booking.external-service.com/start"; 
+  const bookingWin = window.open(bookingUrl, "bookingWindow", "width=900,height=700");
 
-		document.head.innerHTML += '<meta name = "viewport" content = "user-scalable=no, width=device-width">';
-		document.head.innerHTML += '<meta http-equiv="X-UA-Compatible" content="IE=9,10,11" />';
-		
-	window.onmessage = function(e){
-            if (e.data.event_id === 'ob_confirmed' || e.data.event_id === 'ospq_dd' || e.data.event_id === 'ospq_confirmed') { 
-			if (e.data.event_id === 'ob_confirmed'){
-                 var bookingTopOffset = document.getElementById("online-booking-wrapp").offsetTop;
-                 window.scrollTo(0, bookingTopOffset);
-            }
+  if (!bookingWin) {
+    alert("Please allow popups for this site.");
+    return;
+  }
 
-		   document.getElementById('online-booking').setAttribute("src", e.data.page);    
-	      }
+  // Таймер за проверка дали е затворено без статус
+  const checkTimer = setInterval(() => {
+    if (bookingWin.closed) {
+      clearInterval(checkTimer);
+      console.log("Booking closed midway (no confirmation received)");
+    }
+  }, 500);
 
-		  if (e.data.event_id === 'scroll_top_of_el' || e.data.event_id === 'scroll_bottom_of_el') {
-			var bookingTop = document.getElementById("online-booking-wrapp").offsetTop;
-			window.scrollTo(0, bookingTop + e.data.position);
-			}
-      };
+  // Приемане на съобщения от child (cross-origin safe)
+  window.addEventListener("message", (event) => {
+    // Филтрираме по домейн за сигурност
+    if (event.origin !== "https://booking.external-service.com") return;
 
-	function sendMessage(){
-		var iframeWin = document.getElementById("online-booking").contentWindow;
-		iframeWin.postMessage(window.location.href, url);        
-	}
-		
-	(function () {
-		var queryParams = document.location.search.split('?')[1];
-				
-		var formatedParam = '';
-		var bookingWrapp = document.getElementById('online-booking-wrapp');
+    if (event.data?.type === "bookingStatus") {
+      clearInterval(checkTimer);
+      console.log("Booking status from child:", event.data.status);
+      bookingWin.close();
+    }
+  });
+}
+</script>
 
-		if (queryParams && (queryParams.indexOf('Amend')!=-1 || queryParams.indexOf('Edit')!=-1)) {
-			formatedParam = queryParams.replace('=', '/');
-			url += formatedParam;			 
-		}
-
-		url += "&iframe-v2=true";
-		bookingWrapp.innerHTML = '<iframe frameborder="0" onload="sendMessage()" id="online-booking" src="' + url + '" referrerpolicy="no-referrer-when-downgrade" style="width:100%;"></iframe>'
-	})();
-		
-		document.getElementById("online-booking").height = window.innerHeight; 	
-	</script>
+<button onclick="openBooking()">Book Maintenance</button>
 
 
 </body>
