--- a/live.html
+++ b/live.html
@@ -3,7 +3,7 @@
 <body>	 
 	<script>
 function openBooking() {
-  const bookingUrl = "https://demosite.devservice123.com"; 
+  const bookingUrl = "https://lindop.devservice123.com/"; 
   const bookingWin = window.open(bookingUrl, "bookingWindow", "width=900,height=700");
 
   if (!bookingWin) {
