--- a/global-ob-test.html
+++ b/global-ob-test.html
@@ -5,54 +5,7 @@
 <body>	 
 		IFRAME NEW VERSION
 <br>
-Local Vehicle MOT & Servicing
-At Research Garage Group we offer a range of servicing and maintenance options from our Nuneaton and Hinckley service centres to help you keep your car in the best possible condition. Our lengthy past experience has taught us how best to serve our customers, and how to deliver real quality to you at affordable prices.
+<p>Get a <a href="https://mgmotorukonline.service123.co.uk/ServicePlan/Quote" target="_blank">service plan quote and purchase your plan online</a> or contact your local dealer via our <a data-entity-substitution="canonical" data-entity-type="node" data-entity-uuid="abbca802-3ce9-4884-b6b7-50dcfe1b6cd4" href="/dealers" title="Dealers">dealership locator</a>.</p>
 
-We use genuine parts. Which ensures high-quality standards, first-time fit, nationwide parts and labour warranty. All oil supplied is of the very highest quality, latest technology and correct technical specification for your vehicle.
-
-Priding ourselves on our honesty, reliability and outstanding value for money, we bring impressive levels of technical support and our knowledge and understanding of your vehicle, letting Research Garage Group support you in whatever way we can.
-	
-	<div id="online-booking-wrapp">
-	</div>	 
-
-	<script>
-	document.head.innerHTML += '<meta name = "viewport" content = "user-scalable=no, width=device-width">';
-	document.head.innerHTML += '<meta http-equiv="X-UA-Compatible" content="IE=9,10,11" />';
-		
-	window.onmessage = function(e){
-        if (e.data.event_id === 'ob_confirmed' || e.data.event_id === 'ospq_dd' || e.data.event_id === 'ospq_confirmed') { 
-		   document.getElementById('online-booking').setAttribute("src", e.data.page);    
-	    }	 
-			
-	    if (e.data.event_id === 'scroll_top_of_el' || e.data.event_id === 'scroll_bottom_of_el') { 			 
-			var bookingTop = document.getElementById("online-booking-wrapp").offsetTop;
-			window.scrollTo(0, bookingTop + e.data.position);
-        } 	
-			
-	    if (e.data.event_id === 'set_height') {
-			document.getElementById("online-booking").height = e.data.height;				
-        } 			
-    };
-		
-	(function () {
-		var queryParams = document.location.search.split('?')[1];
-		var url = 'https://nortonway.devservice123.com?iframe-v2=true';		
-		var formatedParam = '';
-		var bookingWrapp = document.getElementById('online-booking-wrapp');
-
-		if (queryParams && queryParams.indexOf('Amend')!=-1) {
-			formatedParam = queryParams.replace('=', '/');
-			url += formatedParam;			 
-		}
-		
-		bookingWrapp.innerHTML = '<iframe frameborder="0" id="online-booking" src="' + url + '"  style="width:100%;"></iframe>'
-	})();
-		
-	document.getElementById("online-booking").height = window.innerHeight; 	
-		
-	</script>
-	<div>
-		Servicing to Suit You At Research Garage Group we offer a range of servicing and maintenance options to help you keep your car in the best possible condition. Our lengthy past experience has taught us how best to serve our customers, and how to deliver real quality to you at affordable prices. We use genuine parts, which ensures high quality standards, first time fit and nationwide parts and labour warranty. All oil supplied is of the very highest quality, latest technology and correct technical specification for your vehicle. Priding ourselves on our honesty, reliability and outstanding value for money, we bring impressive levels of technical support and our knowledge and understanding of your vehicle, letting Research Garage Group support you in whatever way we can.
-	</div>
 </body>
 </html>
