--- a/global-ob.html
+++ b/global-ob.html
@@ -1,27 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>	 
-	stripe Test
-	<div id="online-booking-wrapp">
-	</div>	 
-	<script>
-		var url = 'https://demosite.edynamix-global.com/OnlineBookingsNew';
-		var bookingWrapp = document.getElementById('online-booking-wrapp');
-		document.head.innerHTML += '<meta name = "viewport" content = "user-scalable=no, width=device-width">';
-		document.head.innerHTML += '<meta http-equiv="X-UA-Compatible" content="IE=9,10,11" />';
-	 
-
-	function sendMessage(){
-		var iframeWin = document.getElementById("online-booking").contentWindow;
-		iframeWin.postMessage(window.location.href, url);        
-	}
-		
-	(function () {
-		 
-		bookingWrapp.innerHTML = '<iframe frameborder="0" onload="sendMessage()" id="online-booking" src="' + url + '"  style="width:100%;"></iframe>'
-	})();
-		
-		document.getElementById("online-booking").height = window.innerHeight; 	
-	</script>
+	 <a href="https://ronbrooks.service123.co.uk/followup/0258C9C36B5A47DFB056BC2E1FC8ADDB">click here</a>
 </body>
 </html>
