--- a/live.html
+++ b/live.html
@@ -4,7 +4,7 @@
 	<script>
 function openBooking() {
   
-  const child = window.open('https://genesis-cp.edynamix-uat.com/', 'booking');
+  const child = window.open('https://genesis.service123.co.uk/', 'booking');
 
 
 
